added next-app & next-next-app & set up some configs with ts & eslint

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
     "prettier": "latest",
-    "turbo": "latest"
+    "turbo": "latest",
+    "tsconfig": "workspace:*"
   },
   "engines": {
     "node": ">=14.0.0"
