--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,9 @@
     },
     "dev": {
       "cache": false
+    },
+    "deploy": {
+      "dependsOn": ["^build", "^test", "^lint"]
     }
   }
 }
